--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,4 +1,4 @@
-name: Deploy Dockerized Grok Chatbot to EC2
+name: Deploy Dockerized Groq Chatbot to EC2
 
 on:
   push:
@@ -44,13 +44,13 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPO }}
-          GROK_API_KEY: ${{ secrets.GROK_API_KEY }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         run: |
           docker stop chatbot-container || true
           docker rm chatbot-container || true
           docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker run -d \
             --name chatbot-container \
-            -e GROK_API_KEY=$GROK_API_KEY \
+            -e GROQ_API_KEY=$GROQ_API_KEY \
             -p 8000:8000 \
             $ECR_REGISTRY/$ECR_REPOSITORY:latest
