--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -32,10 +32,10 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
+
   Continuous-Deployment:
     needs: Continuous-Integration
     runs-on: self-hosted
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -51,41 +51,6 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Export ECR registry to environment
-        run: echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
-
-      - name: Pull Docker image from ECR
-        env:
-          ECR_REPOSITORY: ${{ secrets.ECR_REPO }}
+      - name: Run Docker Image to serve users
         run: |
-          echo "Pulling image: $ECR_REGISTRY/$ECR_REPOSITORY:latest"
-          docker pull "$ECR_REGISTRY/$ECR_REPOSITORY:latest"
-
-      - name: Run Docker container with debug
-        env:
-          ECR_REPOSITORY: ${{ secrets.ECR_REPO }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-        run: |
-          echo "Running container..."
-          echo "Region: $AWS_DEFAULT_REGION"
-          echo "ECR Repo: $ECR_REPOSITORY"
-
-          docker run -d \
-            --name groq-chatbot-debug \
-            -e AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" \
-            -e AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY" \
-            -e AWS_DEFAULT_REGION="$AWS_DEFAULT_REGION" \
-            -e GROQ_API_KEY="$GROQ_API_KEY" \
-            -p 8080:8080 \
-            "$ECR_REGISTRY/$ECR_REPOSITORY:latest"
-
-          echo "🟡 Listing running containers:"
-          docker ps
-
-          echo "🔍 Showing container logs:"
-          docker logs --tail 50 groq-chatbot-debug || echo "⚠️ Container might have exited."
-
-          echo "✅ Done."
+         docker run -d -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" -e AWS_DEFAULT_REGION="${{ secrets.AWS_DEFAULT_REGION }}" -e GROQ_API_KEY="${{ secrets.GROQ_API_KEY }}" -p 8080:8080 "${{ steps.login-ecr.outputs.registry }}"/"${{ secrets.ECR_REPO }}":latest
